# tiktok-trends-mcp

./: README.md  pyproject.toml
src/tiktok_trends_mcp/: __init__.py
